# libtvout-ctl

./: Makefile.am  configure.ac  tvout-ctl.pc.in  tvout-home-plugin.desktop
debian/: changelog  control  copyright  libtvout-ctl-dev.install  rules
src/: Makefile.am  tvout-ctl-xrandr.c  tvout-ctl-xv.c  tvout-ctl.c  tvout-ctl.h  tvout-home-plugin.c  tvout-home-plugin.h
